<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/onizukaTextView"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onizuka" />

            <TextView
                android:id="@+id/gutsTextView"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guts" />

            <TextView
                android:id="@+id/josephjoestarTextView"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joseph_joestar" />

            <TextView
                android:id="@+id/narutoTextView"
                style="@style/TextViewStyle"
                android:text="@string/naruto" />

            <TextView
                android:id="@+id/shinichiTextView"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shinichi" />

        </LinearLayout>
    </ScrollView>
</layout>